deploying-simple-echo-app-using-canary-deployment/echo-v1-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
spec:
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
        - name: echo
          image: jxlwqq/http-echo
          args:
            - "--text=echo-v1"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1-svc
spec:
  selector:
    app: echo
    version: v1
  ports:
    - port: 80
      targetPort: 8080
