deploying-simple-echo-app-using-canary-deployment/echo-v2-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=echo-v2"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2-svc
spec:
  selector:
    app: echo
    version: v2
  ports:
    - port: 80
      targetPort: 5678
