deploying-simple-echo-app-using-canary-deployment/ingress-primary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - host: canary.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-v1-svc
                port:
                  number: 80
  ingressClassName: nginx
